Update parity plot legend, some paper analysis, and make atmospheric methane figure

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -84,6 +84,68 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Determine overpass time\n",
+    "\n",
+    "Determine average time for each overpass"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carbon Mapper average overpass time is 12:21 minutes\n",
+      "GHGSat average overpass time is 03:48 minutes\n",
+      "Kairos average overpass time is 03:14 minutes\n",
+      "MethaneAIR average overpass time is 22:13 minutes\n",
+      "Scientific Aviation average overpass time is 40:05 minutes\n"
+     ]
+    }
+   ],
+   "source": [
+    "from methods_source import load_operator_flight_days\n",
+    "\n",
+    "def calc_average_overpass_time(operator):\n",
+    "    op_overpasses = load_overpass_summary(operator, 1)\n",
+    "    op_days = load_operator_flight_days(operator)\n",
+    "\n",
+    "    # Set overpass_datetime to index for easier filtering. First save a copy of datetime so I have a column that is not an index\n",
+    "    op_overpasses['datetime_copy'] = op_overpasses['overpass_datetime']\n",
+    "    op_datetime_index = op_overpasses.set_index('overpass_datetime')\n",
+    "\n",
+    "    # Set up dictionary for storing data\n",
+    "    timestamps = pd.Series(dtype='float64')\n",
+    "\n",
+    "    for i in range(len(op_days)):\n",
+    "        flight_day = op_days.iloc[i].start_time.strftime('%Y-%m-%d')\n",
+    "        daily_overpasses = op_datetime_index.loc[flight_day]\n",
+    "        delta_t = daily_overpasses['datetime_copy'].diff()\n",
+    "        timestamps = pd.concat([timestamps, delta_t])\n",
+    "\n",
+    "    average_overpass_time = timestamps.mean()\n",
+    "    overpass_minutes = str(average_overpass_time)[10:15]\n",
+    "    print(f'{operator} average overpass time is {overpass_minutes} minutes')\n",
+    "    return\n",
+    "\n",
+    "calc_average_overpass_time('Carbon Mapper')\n",
+    "calc_average_overpass_time('GHGSat')\n",
+    "calc_average_overpass_time('Kairos')\n",
+    "calc_average_overpass_time('MethaneAIR')\n",
+    "calc_average_overpass_time('Scientific Aviation')\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "#### Carbon Mapper overpass summary for results"
    ],
    "metadata": {
@@ -325,8 +387,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 33,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MethaneAIR: 24 flightlines reported to SU\n",
+      "4 overpasses that fail SU QC\n",
+      "20 overpasses that pass SU QC\n",
+      "20 overpasses quantified by MethaneAIR\n",
+      "0 overpasses removed by MethaneAIR\n",
+      "\n",
+      "2 overpasses documented by Stanford but not reported by MethaneAIR\n",
+      "\n",
+      "Total releases conducted by Stanford (including missing overpasses not reported by MethaneAIR: 26\n",
+      "\n",
+      "Smallest non-zero volume overpass for MethaneAIR that passes SU qc:\n",
+      "Release Rate: 24.420141170712 kg CH4 / hr\n",
+      "[24.30721630677572, 24.53306603464828, 95% CI]\n",
+      "(sigma from gas flow: 0.035178)\n",
+      "(sigma from meter: 0.032765)\n",
+      "(sigma from gas composition: 0.001366)\n",
+      "(combined total sigma: 0.057615)\n",
+      "\n",
+      "Smallest non-zero volume overpass for MethaneAIR that passes operator and SU qc:\n",
+      "Release Rate: 24.420141170712 kg CH4 / hr\n",
+      "[24.30721630677572, 24.53306603464828, 95% CI]\n",
+      "(sigma from gas flow: 0.035178)\n",
+      "(sigma from meter: 0.032765)\n",
+      "(sigma from gas composition: 0.001366)\n",
+      "(combined total sigma: 0.057615)\n",
+      "\n",
+      "Largest volume overpass for MethaneAIR that passes SU qc:\n",
+      "Release Rate: 1289.3507118009002 kg CH4 / hr\n",
+      "[1221.5467589051889, 1357.1546646966117, 95% CI]\n",
+      "(sigma from gas flow: 35.651584)\n",
+      "(sigma from meter: 1.725101)\n",
+      "(sigma from gas composition: 0.004610)\n",
+      "(combined total sigma: 34.593854)\n",
+      "\n",
+      "Largest volume overpass for MethaneAIR that passes operator & SU qc:\n",
+      "Release Rate: 1289.3507118009002 kg CH4 / hr\n",
+      "[1221.5467589051889, 1357.1546646966117, 95% CI]\n",
+      "(sigma from gas flow: 35.651584)\n",
+      "(sigma from meter: 1.725101)\n",
+      "(sigma from gas composition: 0.004610)\n",
+      "(combined total sigma: 34.593854)\n",
+      "\n",
+      "Number of zero releases to MethaneAIR: 1\n",
+      "\n",
+      "No false positives detected, all zero releases were correctly categorized\n",
+      "\n",
+      "False negatives detected: 1\n",
+      "\n",
+      "Largest false negative for MethaneAIR: \n",
+      "Release Rate: 24.420141170712 kg CH4 / hr\n",
+      "[24.30721630677572, 24.53306603464828, 95% CI]\n",
+      "(sigma from gas flow: 0.035178)\n",
+      "(sigma from meter: 0.032765)\n",
+      "(sigma from gas composition: 0.001366)\n",
+      "(combined total sigma: 0.057615)\n",
+      "\n",
+      "Smallest detected plume by MethaneAIR:\n",
+      "Release Rate: 33.60693741122025 kg CH4 / hr\n",
+      "[33.26890987589977, 33.94496494654073, 95% CI]\n",
+      "(sigma from gas flow: 0.040516)\n",
+      "(sigma from meter: 0.044965)\n",
+      "(sigma from gas composition: 0.004610)\n",
+      "(combined total sigma: 0.172463)\n",
+      "\n",
+      "Smallest quantified plume by MethaneAIR:\n",
+      "Release Rate: 33.60693741122025 kg CH4 / hr\n",
+      "[33.26890987589977, 33.94496494654073, 95% CI]\n",
+      "(sigma from gas flow: 0.040516)\n",
+      "(sigma from meter: 0.044965)\n",
+      "(sigma from gas composition: 0.004610)\n",
+      "(combined total sigma: 0.172463)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "### MethaneAIR\n",
     "from writing_analysis import operator_releases_summary_stats\n",
