Update histogram plot for paper to have SciAV strict discard; calculate the flight height in meters

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -312,12 +312,19 @@
       "Carbon Mapper: 10,341.6 ft\n",
       "GHGSat: 6,594.9 ft\n",
       "Kairos: 1,351.4 ft\n",
-      "Methane Air: 43,591.6 ft\n"
+      "Methane Air: 43,591.6 ft\n",
+      "\n",
+      "Average overpass altitude (meters) across all reported overpasses:\n",
+      "\n",
+      "Carbon Mapper: 3,152.1 meters\n",
+      "GHGSat: 2,010.1 meters\n",
+      "Kairos: 411.9 meters\n",
+      "MethaneAIR: 13,286.7 meters\n"
      ]
     }
    ],
    "source": [
-    "from methods_source import load_overpass_summary\n",
+    "from methods_source import load_overpass_summary, feet_per_meter\n",
     "\n",
     "cm_overpasses = load_overpass_summary(operator='Carbon Mapper', stage=1, strict_discard=False, time_ave=60, gas_comp_source='km')\n",
     "ghg_overpasses = load_overpass_summary(operator='GHGSat', stage=1, strict_discard=False, time_ave=60, gas_comp_source='km')\n",
@@ -331,7 +338,22 @@
     "print(f'Carbon Mapper: {cm_altitude:,.1f} ft')\n",
     "print(f'GHGSat: {ghg_altitude:,.1f} ft')\n",
     "print(f'Kairos: {kairos_altitude:,.1f} ft')\n",
-    "print(f'Methane Air: {mair_altitude:,.1f} ft')"
+    "print(f'Methane Air: {mair_altitude:,.1f} ft')\n",
+    "\n",
+    "feet_per_meter = feet_per_meter()\n",
+    "print('\\nAverage overpass altitude (meters) across all reported overpasses:\\n')\n",
+    "op_alt = {\n",
+    "    'Carbon Mapper': cm_altitude,\n",
+    "    'GHGSat': ghg_altitude,\n",
+    "    'Kairos': kairos_altitude,\n",
+    "    'MethaneAIR': mair_altitude,\n",
+    "}\n",
+    "\n",
+    "operators = ['Carbon Mapper', 'GHGSat', 'Kairos', 'MethaneAIR']\n",
+    "\n",
+    "for operator in operators:\n",
+    "    alt_meters = op_alt[operator] / feet_per_meter\n",
+    "    print(f'{operator}: {alt_meters:,.1f} meters')"
    ],
    "metadata": {
     "collapsed": false
