Write code for generating calculating average windspeed

--- a/13_johnson_pod.ipynb
+++ b/13_johnson_pod.ipynb
@@ -13,12 +13,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'average_windspeed': 1.0174869655737704, 'average_winddirection': 116.53198852459018, 'stdev_windspeed': 0.2118695722622119, 'stdev_winddirection': 30.928243664269548}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "1.0174869655737704"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# First, code for generating wind data - example code\n",
+    "from methods_source import summarize_wind_conditions, calc_1min_windspeed\n",
+    "import datetime\n",
+    "\n",
+    "test_1 = datetime.datetime(2022, 10, 10, 18, 16, 10)\n",
+    "test_2 = datetime.datetime(2022, 10, 10, 18, 17, 10)\n",
+    "\n",
+    "wind_test1 = summarize_wind_conditions(test_1, test_2)\n",
+    "\n",
+    "wind_test2 = calc_1min_windspeed(test_1, direction='forward')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "# First, code for generating wind data\n",
-    "\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
