Integrated wind averaging functions into satellite data frame generation. Switched wind direction averaging from linear to circular mean. Updated the 1-minute averaging function to allow other time windows, (also changed its name, propagated to all occurrences in 13_johnson_pod.ipynb).

--- a/13_johnson_pod.ipynb
+++ b/13_johnson_pod.ipynb
@@ -13,27 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'average_windspeed': 1.0174869655737704, 'average_winddirection': 116.53198852459018, 'stdev_windspeed': 0.2118695722622119, 'stdev_winddirection': 30.928243664269548}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "1.0174869655737704"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "# First, code for generating wind data - example code\n",
-    "from methods_source import summarize_wind_conditions, calc_1min_windspeed\n",
+    "from methods_source import summarize_wind_conditions, calc_avg_windspeed\n",
     "import datetime\n",
     "\n",
     "test_1 = datetime.datetime(2022, 10, 10, 18, 16, 10)\n",
@@ -41,7 +25,7 @@
     "\n",
     "wind_test1 = summarize_wind_conditions(test_1, test_2)\n",
     "\n",
-    "wind_test2 = calc_1min_windspeed(test_1, direction='forward')"
+    "wind_test2 = calc_avg_windspeed(test_1, direction='forward')"
    ],
    "metadata": {
     "collapsed": false
@@ -56,31 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     overpass_id   overpass_datetime           h         u           Q  D\n",
-      "0            1.0 2022-10-24 16:46:15  408.871167  2.666187    0.000000  0\n",
-      "1            2.0 2022-10-24 16:49:22  416.461333  2.564415    0.000000  0\n",
-      "2            3.0 2022-10-24 16:52:32  398.889667  4.180655   18.748945  1\n",
-      "3            4.0 2022-10-24 16:55:42  403.756000  3.860501   18.719447  1\n",
-      "4            5.0 2022-10-24 16:59:01  409.230833  3.003148   18.739307  1\n",
-      "..           ...                 ...         ...       ...         ... ..\n",
-      "344        345.0 2022-10-28 20:27:06  409.913000  2.439459  392.153592  1\n",
-      "345        346.0 2022-10-28 20:30:12  407.326667  2.131373  382.078576  1\n",
-      "346        347.0 2022-10-28 20:33:34  415.323667  3.115726  381.475330  1\n",
-      "347        348.0 2022-10-28 20:36:41  422.359500  3.774662   25.689220  1\n",
-      "348        349.0 2022-10-28 20:39:57  408.460333  1.909657  113.677707  1\n",
-      "\n",
-      "[349 rows x 6 columns]\n"
-     ]
-    }
-   ],
+   "execution_count": 2,
+   "outputs": [],
    "source": [
-    "from methods_source import load_overpass_summary, feet_per_meter, calc_1min_windspeed\n",
+    "from methods_source import load_overpass_summary, feet_per_meter, calc_avg_windspeed\n",
     "import pandas as pd\n",
     "kairos = load_overpass_summary('Kairos', 1, strict_discard=False)\n",
     "feet_per_meter = feet_per_meter()\n",
@@ -89,7 +52,7 @@
     "kairos_POD_variables['overpass_id'] = kairos['overpass_id']\n",
     "kairos_POD_variables['overpass_datetime'] = kairos['overpass_datetime']\n",
     "kairos_POD_variables['h'] = kairos['altitude_feet'] / feet_per_meter # flight altitude in m\n",
-    "kairos_POD_variables['u'] = kairos['overpass_datetime'].apply(calc_1min_windspeed) # windspeed in m/s\n",
+    "kairos_POD_variables['u'] = kairos['overpass_datetime'].apply(calc_avg_windspeed) # windspeed in m/s\n",
     "kairos_POD_variables['Q'] = kairos['release_rate_kgh'] # release rate in kg / hr\n",
     "kairos_POD_variables['D'] = kairos['operator_detected'].apply(int) # operator detected as 0 or 1\n",
     "\n",
@@ -109,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
