--- a/01_meter_data_cleaning.ipynb
+++ b/01_meter_data_cleaning.ipynb
@@ -29,7 +29,8 @@
     "# Setup\n",
     "\n",
     "# Imports\n",
-    "from methods_source import load_summary_files, make_operator_meter_dataset, generate_daily_releases, load_flight_days\n"
+    "from methods_source import load_summary_files, make_operator_meter_dataset, generate_daily_releases, load_flight_days\n",
+    "#TODO remove all mentions of gas source in this notebook"
    ],
    "metadata": {
     "collapsed": false
