--- a/05_probability_of_detection.ipynb
+++ b/05_probability_of_detection.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "# Setup\n",
+    "#TODO update code to align with approach used in 11_paper_figures\n",
     "\n",
     "# Imports\n",
     "\n",
