--- a/11_paper_figures.ipynb
+++ b/11_paper_figures.ipynb
@@ -43,7 +43,7 @@
     "import datetime\n",
     "from plot_methods import get_parity_data, make_parity_plot\n",
     "\n",
-    "\n",
+    "#TODO clean up this entire notebook\n",
     "cm_1_data, cm_1_notes = get_parity_data('Carbon Mapper', stage = 1)\n",
     "cm_2_data, cm_2_notes = get_parity_data('Carbon Mapper', stage = 2)\n",
     "cm_3_data, cm_3_notes = get_parity_data('Carbon Mapper', stage = 3)\n",
