--- a/12_presentation_figs.ipynb
+++ b/12_presentation_figs.ipynb
@@ -28,7 +28,7 @@
     "import pathlib\n",
     "import datetime\n",
     "from plot_methods import plot_selected_release_period\n",
-    "\n",
+    "#TODO clean up this notebook\n",
     "start_time = datetime.datetime(2022, 10, 26, 19, 10, 0)\n",
     "end_time = datetime.datetime(2022, 10, 26, 19, 20, 0)\n",
     "plot_selected_release_period(start_time, end_time)\n"
