--- a/05_satellites/SatelliteTestingMain.ipynb
+++ b/05_satellites/SatelliteTestingMain.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "# Import libraries\n",
@@ -54,6 +54,8 @@
     "from scipy import odr\n",
     "import pathlib\n",
     "import lxml\n",
+    "import windrose\n",
+    "from datetime import datetime\n",
     "\n",
     "# importlib.reload(meterUncertainty)"
    ],
@@ -2686,6 +2688,117 @@
     "# axisbound\n",
     "# selectedSatelliteResultsZeros.loc[selectedSatelliteResultsZeros['Estimate (TPH) num'] > 0, ['Team', 'Estimate (TPH) num']]\n",
     "zerosPlot = sns.scatterplot(data=selectedSatelliteResultsZeros, x='gas_tph_mean', y='Estimate (TPH) num', style='Team', hue='Satellite', markers=slctMarkers, s=80, alpha=0.4, legend=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Generate wind roses for selected data points"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'average_period' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/d9/mx01w3495mjd7l__vt72_xl00000gn/T/ipykernel_16444/417096740.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     47\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0mdropped_rows\u001B[0m \u001B[0;34m>\u001B[0m \u001B[0;36m0\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     48\u001B[0m             \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34mf'Number of rows that were NA in the average period ({start_t} to {stop_t}): {dropped_rows}'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 49\u001B[0;31m     \u001B[0maverage_period\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     50\u001B[0m     \u001B[0;31m# windrose.plot_windrose(average_period, )\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     51\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'average_period' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# def plot_windrose(start_t, stop_t):\n",
+    "start_t = datetime.strptime('11/18/22 18:20', '%m/%d/%y %H:%M')\n",
+    "stop_t = datetime.strptime('11/18/22 18:25', '%m/%d/%y %H:%M')\n",
+    "\"\"\" Plot a wind rose for wind speed and direction values given a start and stop time.\n",
+    "Inputs:\n",
+    "  - start_t, stop_t are datetime objects\n",
+    "\n",
+    "Outputs: A wind rose for the selected period\n",
+    "\"\"\"\n",
+    "\n",
+    "if start_t.date() != stop_t.date():\n",
+    "    # End function if start and end t are on different dates\n",
+    "    print(\n",
+    "        'Do not attempt to calculate average flow across multiple dates. Please consider a new start or end time.')\n",
+    "    # return\n",
+    "elif start_t.date() > stop_t.date():\n",
+    "    print('Start time is after end time. Time for *you* to do some debugging!')\n",
+    "    # return\n",
+    "else:\n",
+    "    # Load data\n",
+    "    file_name = start_t.strftime('%m_%d')\n",
+    "    # use subclass Path (instead of PurePath) because we need to check if the file exists\n",
+    "    file_path = pathlib.Path('03_wind_data', f'{file_name}.csv')\n",
+    "\n",
+    "    # Check if we have a meter file for the input date\n",
+    "    if not file_path.is_file():\n",
+    "        # If file does not exist, we did not conduct releases on that day.\n",
+    "        # Set all values of results_summary to zero or np.nan\n",
+    "        results_summary = {\n",
+    "            'average_windspeed': np.nan,\n",
+    "            'average_winddirection': np.nan,\n",
+    "            'stdev_windspeed': np.nan,\n",
+    "            'stdev_winddirection': np.nan,\n",
+    "        }\n",
+    "    else:\n",
+    "        # If file exists, calculate flow rate summary info:\n",
+    "        # Select data for averaging\n",
+    "        wind_data = pd.read_csv(file_path, parse_dates=['datetime'])\n",
+    "        time_ave_mask = (wind_data['datetime'] >= start_t) & (wind_data['datetime'] <= stop_t)\n",
+    "        average_period = wind_data.loc[time_ave_mask].copy()\n",
+    "        length_before_drop_na = len(average_period)\n",
+    "\n",
+    "        # Drop rows with NA values\n",
+    "        average_period.dropna(axis='index', inplace=True, thresh=7)\n",
+    "        length_after_drop_na = len(average_period)\n",
+    "        dropped_rows = length_before_drop_na - length_after_drop_na\n",
+    "        if dropped_rows > 0:\n",
+    "            print(f'Number of rows that were NA in the average period ({start_t} to {stop_t}): {dropped_rows}')\n",
+    "    average_period\n",
+    "    # windrose.plot_windrose(average_period, )\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PosixPath('03_wind_data/11_18.csv')"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_path #.is_file()\n",
+    "# windrose.plot_windrose()"
    ],
    "metadata": {
     "collapsed": false,
