Calculate altitude in meters

--- a/03_summarize_results.ipynb
+++ b/03_summarize_results.ipynb
@@ -370,21 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Carbon Mapper average daily altitude:\n",
-      "\n",
-      "           altitude_feet\n",
-      "2022-10-10 10,372.2 feet\n",
-      "2022-10-11 10,327.0 feet\n",
-      "2022-10-12 10,218.8 feet\n",
-      "2022-10-28 10,182.4 feet\n",
-      "2022-10-29 10,373.5 feet\n",
-      "2022-10-31 10,519.8 feet\n"
+      "altitude_feet    float64\n",
+      "dtype: object\n"
      ]
     }
    ],
@@ -392,8 +385,10 @@
     "from methods_source import calc_daily_altitude\n",
     "operator = 'Carbon Mapper'\n",
     "cm_alt = calc_daily_altitude(operator)\n",
-    "print(f'{operator} average daily altitude:\\n')\n",
-    "print(cm_alt.to_string(formatters={'altitude_feet':'{:,.1f} feet'.format}))"
+    "# print(f'{operator} average daily altitude:\\n')\n",
+    "# print(cm_alt.to_string(formatters={'altitude_feet':'{:,.1f} feet'.format}))\n",
+    "\n",
+    "print(cm_alt.dtypes)"
    ],
    "metadata": {
     "collapsed": false
