--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -14,6 +14,112 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Flight Altitude Calculations\n",
+    "Use \"altitude_feet\" column in overpass summary files\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from methods_source import load_overpass_summary, feet_per_meter\n",
+    "\n",
+    "cm_overpasses = load_overpass_summary(operator='Carbon Mapper', stage=1, strict_discard=False, time_ave=60, gas_comp_source='ms')\n",
+    "ghg_overpasses = load_overpass_summary(operator='GHGSat', stage=1, strict_discard=False, time_ave=60, gas_comp_source='ms')\n",
+    "kairos_overpasses = load_overpass_summary(operator='Kairos', stage=1, strict_discard=False, time_ave=60, gas_comp_source='ms')\n",
+    "mair_overpasses = load_overpass_summary(operator='Methane Air', stage=1, strict_discard=False, time_ave=60, gas_comp_source='ms')\n",
+    "cm_altitude = cm_overpasses.altitude_feet.mean()\n",
+    "ghg_altitude = ghg_overpasses.altitude_feet.mean()\n",
+    "kairos_altitude = kairos_overpasses.altitude_feet.mean()\n",
+    "mair_altitude = mair_overpasses.altitude_feet.mean()\n",
+    "print('Average overpass altitude (feet) across all reported overpasses:\\n')\n",
+    "print(f'Carbon Mapper: {cm_altitude:,.1f} ft')\n",
+    "print(f'GHGSat: {ghg_altitude:,.1f} ft')\n",
+    "print(f'Kairos: {kairos_altitude:,.1f} ft')\n",
+    "print(f'Methane Air: {mair_altitude:,.1f} ft')\n",
+    "\n",
+    "feet_per_meter = feet_per_meter()\n",
+    "print('\\nAverage overpass altitude (meters) across all reported overpasses:\\n')\n",
+    "op_alt = {\n",
+    "    'Carbon Mapper': cm_altitude,\n",
+    "    'GHGSat': ghg_altitude,\n",
+    "    'Kairos': kairos_altitude,\n",
+    "    'MethaneAIR': mair_altitude,\n",
+    "}\n",
+    "\n",
+    "operators = ['Carbon Mapper', 'GHGSat', 'Kairos', 'MethaneAIR']\n",
+    "\n",
+    "for operator in operators:\n",
+    "    alt_meters = op_alt[operator] / feet_per_meter\n",
+    "    print(f'{operator}: {alt_meters:,.1f} meters')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Carbon Mapper average daily altitude:\n",
+      "2022-10-10: 10372.2 feet / 34029.4 meters\n",
+      "2022-10-11: 10327.0 feet / 33881.1 meters\n",
+      "2022-10-12: 10218.8 feet / 33526.2 meters\n",
+      "2022-10-28: 10182.4 feet / 33406.9 meters\n",
+      "2022-10-29: 10373.5 feet / 34033.7 meters\n",
+      "2022-10-31: 10519.8 feet / 34513.8 meters\n",
+      "GHGSat average daily altitude:\n",
+      "2022-10-31: 6565.1 feet / 21539.0 meters\n",
+      "2022-11-02: 6561.0 feet / 21525.5 meters\n",
+      "2022-11-04: 6575.5 feet / 21573.2 meters\n",
+      "2022-11-07: 6694.1 feet / 21962.1 meters\n",
+      "Kairos average daily altitude:\n",
+      "2022-10-24: 1334.4 feet / 4377.9 meters\n",
+      "2022-10-25: 1317.9 feet / 4323.8 meters\n",
+      "2022-10-26: 1328.9 feet / 4359.8 meters\n",
+      "2022-10-27: 1389.3 feet / 4558.1 meters\n",
+      "2022-10-28: 1385.6 feet / 4545.9 meters\n",
+      "Methane Air average daily altitude:\n",
+      "2022-10-25: 43367.8 feet / 142282.9 meters\n",
+      "2022-10-29: 43780.9 feet / 143638.2 meters\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Calculate average flight for each day of testing\n",
+    "from methods_source import calc_daily_altitude, feet_per_meter\n",
+    "\n",
+    "feet_per_meter = feet_per_meter()\n",
+    "\n",
+    "def print_daily_altitude(operator):\n",
+    "    alt = calc_daily_altitude(operator)\n",
+    "    print(f'{operator} average daily altitude:')\n",
+    "    for date, altitude_feet in alt.iterrows():\n",
+    "        altitude_meters = altitude_feet * feet_per_meter\n",
+    "        print(f'{date}: {altitude_feet[\"altitude_feet\"]:.1f} feet / {altitude_meters[0]:.1f} meters')\n",
+    "\n",
+    "operators = ['Carbon Mapper', 'GHGSat', 'Kairos', 'Methane Air']\n",
+    "for operator in operators:\n",
+    "    print_daily_altitude(operator)\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Summarize distribution of overpasses\n",
     "\n",
     "Total number of overpasses, missing data, max and min given to each team, number that passed Stanford QC\n",
@@ -1320,6 +1426,71 @@
     "print(f'\\nTotal Reported Detections that pass SU Filters:')\n",
     "print(f'mIME method detected {mime_detected_su_pass} non-zero and valid releases.')\n",
     "print(f'DI method detected {di_detected_su_pass} non-zero and valid releases.')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Unit Conversions\n",
+    "\n",
+    "Unit conversions between metric and English units for intro"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tall stack height: 7.3 meters\n",
+      " Short stack height: 3.0 meters\n",
+      "\n",
+      "Max trailer pressure is: 16.6487 MPa\n",
+      "\n",
+      "Pressure outlet from RT-30 is: 1.1356 - 1.4803 MPa\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "########## Length ##########\n",
+    "\n",
+    "# Feet per meter\n",
+    "feet_per_meter = 3.28084\n",
+    "\n",
+    "# Stack heights:\n",
+    "tall_stack_ft = 24\n",
+    "short_stack_ft = 10\n",
+    "\n",
+    "tall_stack_m = tall_stack_ft / feet_per_meter\n",
+    "short_stack_m = short_stack_ft / feet_per_meter\n",
+    "print(f'Tall stack height: {tall_stack_m:0.1f} meters\\n Short stack height: {short_stack_m:0.1f} meters\\n')\n",
+    "\n",
+    "########## Pressure ##########\n",
+    "def psig_to_mpa(psig):\n",
+    "    psi_per_mpa = 145.038\n",
+    "    atm_psi = 14.7 # for converting from psig to psi\n",
+    "    return (psig + atm_psi)/psi_per_mpa\n",
+    "\n",
+    "# Trailer pressure\n",
+    "max_pressure_psig = 2400\n",
+    "max_pressure_mpa = psig_to_mpa(max_pressure_psig)\n",
+    "print(f\"Max trailer pressure is: {max_pressure_mpa:0.4f} MPa\\n\")\n",
+    "\n",
+    "# Pressure regulation skid outlet pressure\n",
+    "rt30_low_psig = 150\n",
+    "rt30_high_psig = 200\n",
+    "rt30_low_mpa = psig_to_mpa(rt30_low_psig)\n",
+    "rt30_high_mpa = psig_to_mpa(rt30_high_psig)\n",
+    "print(f\"Pressure outlet from RT-30 is: {rt30_low_mpa:0.4f} - {rt30_high_mpa:0.4f} MPa\\n\")"
    ],
    "metadata": {
     "collapsed": false
