Update calculations for SciAV measurement time

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -23,39 +23,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average, minimum, and maximum overpass altitudes across all reported overpasses:\n",
+      "\n",
+      "Carbon Mapper:\n",
+      " Average Altitude: 3,152.1 meters (10,341.6 ft)\n",
+      " Min Altitude: 3,050.4 meters (10,007.9 ft)\n",
+      " Max Altitude: 3,228.5 meters (10,592.2 ft)\n",
+      "\n",
+      "GHGSat:\n",
+      " Average Altitude: 2,010.1 meters (6,594.9 ft)\n",
+      " Min Altitude: 1,927.5 meters (6,323.8 ft)\n",
+      " Max Altitude: 2,083.5 meters (6,835.6 ft)\n",
+      "\n",
+      "Kairos:\n",
+      " Average Altitude: 411.9 meters (1,351.4 ft)\n",
+      " Min Altitude: 368.3 meters (1,208.2 ft)\n",
+      " Max Altitude: 538.4 meters (1,766.3 ft)\n",
+      "\n",
+      "MethaneAIR:\n",
+      " Average Altitude: 13,286.7 meters (43,591.6 ft)\n",
+      " Min Altitude: 12,687.0 meters (41,624.0 ft)\n",
+      " Max Altitude: 13,614.7 meters (44,667.5 ft)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "from methods_source import load_overpass_summary, feet_per_meter\n",
     "\n",
-    "cm_overpasses = load_overpass_summary(operator='Carbon Mapper', stage=1, strict_discard=False, time_ave=60, gas_comp_source='ms')\n",
-    "ghg_overpasses = load_overpass_summary(operator='GHGSat', stage=1, strict_discard=False, time_ave=60, gas_comp_source='ms')\n",
-    "kairos_overpasses = load_overpass_summary(operator='Kairos', stage=1, strict_discard=False, time_ave=60, gas_comp_source='ms')\n",
-    "mair_overpasses = load_overpass_summary(operator='Methane Air', stage=1, strict_discard=False, time_ave=60, gas_comp_source='ms')\n",
-    "cm_altitude = cm_overpasses.altitude_feet.mean()\n",
-    "ghg_altitude = ghg_overpasses.altitude_feet.mean()\n",
-    "kairos_altitude = kairos_overpasses.altitude_feet.mean()\n",
-    "mair_altitude = mair_overpasses.altitude_feet.mean()\n",
-    "print('Average overpass altitude (feet) across all reported overpasses:\\n')\n",
-    "print(f'Carbon Mapper: {cm_altitude:,.1f} ft')\n",
-    "print(f'GHGSat: {ghg_altitude:,.1f} ft')\n",
-    "print(f'Kairos: {kairos_altitude:,.1f} ft')\n",
-    "print(f'Methane Air: {mair_altitude:,.1f} ft')\n",
-    "\n",
-    "feet_per_meter = feet_per_meter()\n",
-    "print('\\nAverage overpass altitude (meters) across all reported overpasses:\\n')\n",
-    "op_alt = {\n",
-    "    'Carbon Mapper': cm_altitude,\n",
-    "    'GHGSat': ghg_altitude,\n",
-    "    'Kairos': kairos_altitude,\n",
-    "    'MethaneAIR': mair_altitude,\n",
-    "}\n",
-    "\n",
     "operators = ['Carbon Mapper', 'GHGSat', 'Kairos', 'MethaneAIR']\n",
-    "\n",
+    "op_alt = {}\n",
+    "feet_per_meter = feet_per_meter()\n",
     "for operator in operators:\n",
-    "    alt_meters = op_alt[operator] / feet_per_meter\n",
-    "    print(f'{operator}: {alt_meters:,.1f} meters')"
+    "    overpasses = load_overpass_summary(operator=operator, stage=1, strict_discard=False, time_ave=60, gas_comp_source='ms')\n",
+    "    altitude = overpasses.altitude_feet\n",
+    "    altitude_meters = altitude / feet_per_meter\n",
+    "    op_alt[operator] = {\n",
+    "        'average_meters': altitude_meters.mean(),\n",
+    "        'average_feet': altitude.mean(),\n",
+    "        'min_meters': altitude_meters.min(),\n",
+    "        'min_feet': altitude.min(),\n",
+    "        'max_meters': altitude_meters.max(),\n",
+    "        'max_feet': altitude.max()\n",
+    "    }\n",
+    "\n",
+    "print('Average, minimum, and maximum overpass altitudes across all reported overpasses:\\n')\n",
+    "for operator in operators:\n",
+    "    data = op_alt[operator]\n",
+    "    print(f'{operator}:')\n",
+    "    print(f' Average Altitude: {data[\"average_meters\"]:,.1f} meters ({data[\"average_feet\"]:,.1f} ft)')\n",
+    "    print(f' Min Altitude: {data[\"min_meters\"]:,.1f} meters ({data[\"min_feet\"]:,.1f} ft)')\n",
+    "    print(f' Max Altitude: {data[\"max_meters\"]:,.1f} meters ({data[\"max_feet\"]:,.1f} ft)')\n",
+    "    print()\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -63,33 +90,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Carbon Mapper average daily altitude:\n",
-      "2022-10-10: 10372.2 feet / 34029.4 meters\n",
-      "2022-10-11: 10327.0 feet / 33881.1 meters\n",
-      "2022-10-12: 10218.8 feet / 33526.2 meters\n",
-      "2022-10-28: 10182.4 feet / 33406.9 meters\n",
-      "2022-10-29: 10373.5 feet / 34033.7 meters\n",
-      "2022-10-31: 10519.8 feet / 34513.8 meters\n",
+      "2022-10-10: 10,372.2 feet / 3,161.4 meters\n",
+      "2022-10-11: 10,327.0 feet / 3,147.7 meters\n",
+      "2022-10-12: 10,218.8 feet / 3,114.7 meters\n",
+      "2022-10-28: 10,182.4 feet / 3,103.6 meters\n",
+      "2022-10-29: 10,373.5 feet / 3,161.8 meters\n",
+      "2022-10-31: 10,519.8 feet / 3,206.4 meters\n",
+      "\n",
+      "\n",
       "GHGSat average daily altitude:\n",
-      "2022-10-31: 6565.1 feet / 21539.0 meters\n",
-      "2022-11-02: 6561.0 feet / 21525.5 meters\n",
-      "2022-11-04: 6575.5 feet / 21573.2 meters\n",
-      "2022-11-07: 6694.1 feet / 21962.1 meters\n",
+      "2022-10-31: 6,565.1 feet / 2,001.0 meters\n",
+      "2022-11-02: 6,561.0 feet / 1,999.8 meters\n",
+      "2022-11-04: 6,575.5 feet / 2,004.2 meters\n",
+      "2022-11-07: 6,694.1 feet / 2,040.3 meters\n",
+      "\n",
+      "\n",
       "Kairos average daily altitude:\n",
-      "2022-10-24: 1334.4 feet / 4377.9 meters\n",
-      "2022-10-25: 1317.9 feet / 4323.8 meters\n",
-      "2022-10-26: 1328.9 feet / 4359.8 meters\n",
-      "2022-10-27: 1389.3 feet / 4558.1 meters\n",
-      "2022-10-28: 1385.6 feet / 4545.9 meters\n",
+      "2022-10-24: 1,334.4 feet / 406.7 meters\n",
+      "2022-10-25: 1,317.9 feet / 401.7 meters\n",
+      "2022-10-26: 1,328.9 feet / 405.0 meters\n",
+      "2022-10-27: 1,389.3 feet / 423.5 meters\n",
+      "2022-10-28: 1,385.6 feet / 422.3 meters\n",
+      "\n",
+      "\n",
       "Methane Air average daily altitude:\n",
-      "2022-10-25: 43367.8 feet / 142282.9 meters\n",
-      "2022-10-29: 43780.9 feet / 143638.2 meters\n"
+      "2022-10-25: 43,367.8 feet / 13,218.5 meters\n",
+      "2022-10-29: 43,780.9 feet / 13,344.4 meters\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -103,15 +138,13 @@
     "    alt = calc_daily_altitude(operator)\n",
     "    print(f'{operator} average daily altitude:')\n",
     "    for date, altitude_feet in alt.iterrows():\n",
-    "        altitude_meters = altitude_feet * feet_per_meter\n",
-    "        print(f'{date}: {altitude_feet[\"altitude_feet\"]:.1f} feet / {altitude_meters[0]:.1f} meters')\n",
+    "        altitude_meters = altitude_feet / feet_per_meter\n",
+    "        print(f'{date}: {altitude_feet[\"altitude_feet\"]:,.1f} feet / {altitude_meters[0]:,.1f} meters')\n",
     "\n",
     "operators = ['Carbon Mapper', 'GHGSat', 'Kairos', 'Methane Air']\n",
     "for operator in operators:\n",
     "    print_daily_altitude(operator)\n",
-    "\n",
-    "\n",
-    "\n"
+    "    print('\\n')"
    ],
    "metadata": {
     "collapsed": false
@@ -200,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -210,14 +243,16 @@
       "GHGSat average overpass time is 03:48 minutes\n",
       "Kairos average overpass time is 03:14 minutes\n",
       "MethaneAIR average overpass time is 22:13 minutes\n",
-      "Scientific Aviation average overpass time is 40:05 minutes\n"
+      "Scientific Aviation average overpass time is 20:34 minutes\n"
      ]
     }
    ],
    "source": [
-    "from methods_source import load_operator_flight_days\n",
+    "from methods_source import load_operator_flight_days, load_overpass_summary, abbreviate_op_name\n",
+    "import pandas as pd\n",
     "\n",
     "def calc_average_overpass_time(operator):\n",
+    "    op_ab = abbreviate_op_name(operator)\n",
     "    op_overpasses = load_overpass_summary(operator, 1)\n",
     "    op_days = load_operator_flight_days(operator)\n",
     "\n",
@@ -227,12 +262,20 @@
     "\n",
     "    # Set up dictionary for storing data\n",
     "    timestamps = pd.Series(dtype='float64')\n",
+    "    if op_ab == 'sciav':\n",
+    "        measurement_time = op_overpasses['overpass_datetime_end'] - op_overpasses['datetime_copy']\n",
+    "        timestamps = measurement_time\n",
+    "    else:\n",
+    "        # iterate through operator flight days (Note: _ represents index)\n",
+    "        for _, flight_day in op_days.iterrows():\n",
+    "            # Iterate through each flight day\n",
+    "            start_time = flight_day['start_time']\n",
+    "            flight_day_str = start_time.strftime('%Y-%m-%d')\n",
+    "            daily_overpasses = op_datetime_index.loc[flight_day_str]\n",
     "\n",
-    "    for i in range(len(op_days)):\n",
-    "        flight_day = op_days.iloc[i].start_time.strftime('%Y-%m-%d')\n",
-    "        daily_overpasses = op_datetime_index.loc[flight_day]\n",
-    "        delta_t = daily_overpasses['datetime_copy'].diff()\n",
-    "        timestamps = pd.concat([timestamps, delta_t])\n",
+    "            # Calculate time differences\n",
+    "            delta_t = daily_overpasses['datetime_copy'].diff()\n",
+    "            timestamps = pd.concat([timestamps, delta_t])\n",
     "\n",
     "    average_overpass_time = timestamps.mean()\n",
     "    overpass_minutes = str(average_overpass_time)[10:15]\n",
