Revisions to paper figures and analysis based on Evan's feedback

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -389,6 +389,51 @@
     "# Carbon Mapper\n",
     "operator = 'Carbon Mapper'\n",
     "operator_releases_summary_stats(operator)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Carbon Mapper detection notes\n",
+    "\n",
+    "Carbon Mapper applied a QC filter for quantification, but they report detection even where they were not confident in quantification.\n",
+    "\n",
+    "Here, I determine the smallest release that they detected, considering points that fail their quantification QC."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Release Rate: 8.638673389503753 kg CH4 / hr\n",
+      "[8.477044323822133, 8.800302455185372, 95% CI]\n",
+      "(sigma from gas flow: 0.053772)\n",
+      "(sigma from meter: 0.039648)\n",
+      "(sigma from gas composition: 0.001362)\n",
+      "(combined total sigma: 0.071400)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from methods_source import load_overpass_summary, classify_confusion_categories\n",
+    "from writing_analysis import print_overpass_info\n",
+    "\n",
+    "operator = 'Carbon Mapper'\n",
+    "overpasses = load_overpass_summary(operator, stage=1)\n",
+    "operator_detected = overpasses[overpasses['operator_detected']] # implies detected == True\n",
+    "smallest_detected = operator_detected.min()\n",
+    "print_overpass_info(smallest_detected)"
    ],
    "metadata": {
     "collapsed": false
@@ -582,7 +627,6 @@
    "source": [
     "# Further investigate GHGSat false negatives, as they detect small releases but also had some higher false negatives\n",
     "from methods_source import load_overpass_summary, classify_confusion_categories\n",
-    "\n",
     "from writing_analysis import print_overpass_info\n",
     "\n",
     "operator = 'GHGSat'\n",
