Small calculations on GHGSat for paper writing

--- a/10_paper_analysis.ipynb
+++ b/10_paper_analysis.ipynb
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -620,8 +620,18 @@
       "(sigma from meter: 0.022517)\n",
       "(sigma from gas composition: 0.002693)\n",
       "(combined total sigma: 0.053109)\n",
-      "\n"
+      "\n",
+      "Number of releases between 15 kgh and 30 kgh: 38\n",
+      " False negatives were 7.894737% of releases in this range\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "0.07894736842105263"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -631,8 +641,8 @@
     "\n",
     "operator = 'GHGSat'\n",
     "overpasses = load_overpass_summary(operator, stage=1)\n",
-    "pass_su_qc = overpasses.loc[overpasses.qc_summary == 'pass_all']\n",
-    "true_positives, false_positives, true_negatives, false_negatives = classify_confusion_categories(pass_su_qc)\n",
+    "pass_all_qc = overpasses.loc[overpasses.qc_summary == 'pass_all']\n",
+    "true_positives, false_positives, true_negatives, false_negatives = classify_confusion_categories(pass_all_qc)\n",
     "\n",
     "# How many of these releases were less than 5 kgh?\n",
     "small_false_negatives = false_negatives.loc[false_negatives['release_rate_kgh'] < 5]\n",
@@ -644,9 +654,14 @@
     "print(large_false_negatives['release_rate_kgh'])\n",
     "print(f'\\n')\n",
     "\n",
-    "# print details of each of hte false negatives that is over 5 kgh\n",
+    "# print details of each of the false negatives that is over 5 kgh\n",
     "for index, row in large_false_negatives.iterrows():\n",
-    "    print_overpass_info(row)"
+    "    print_overpass_info(row)\n",
+    "\n",
+    "# How many releases were between 15 and 30 kg / hr\n",
+    "range_mask = (pass_all_qc['release_rate_kgh'] > 15 ) & (pass_all_qc['release_rate_kgh'] < 30 )\n",
+    "releases_15_30 = pass_all_qc.loc[range_mask]\n",
+    "print(f'Number of releases between 15 kgh and 30 kgh: {len(releases_15_30)}\\n False negatives were {len(large_false_negatives)/len(releases_15_30)*100:1f}% of releases in this range')\n"
    ],
    "metadata": {
     "collapsed": false
